--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     background-image: url("../images/fondo.jpg");
     background-attachment: fixed;
     background-size: 100%;
-    max-width: 1000px;
+    max-width: 1024px;
     margin:20px ;
     border-radius: 15px;
     border: black 2px solid;
@@ -36,9 +36,13 @@ header{
 footer {
     background-color: rgba(82, 51, 51, .9);
     border-radius: 0 0 15px 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 footer * {
     color:rgba(252, 244, 175, 0.884);
+    align-content: space-between;
 }
 
 header {
@@ -139,7 +143,7 @@ h1 {
 }
 
 .contenido_secundario > img {
-    max-width: 60%;
+    max-width: 80%;
 } 
 
 .contenido_secundario p{
@@ -149,10 +153,6 @@ h1 {
 
 img {
     border-radius: 5px;
-}
-
-form, form label, form  input, form  textarea {
-    font-family: 'Courier New', Courier, monospace;
 }
 
 form {
@@ -167,16 +167,17 @@ form {
     margin-bottom: 20px;
     margin-block-end: 5px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-}
-.form_menu {
-    width: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-form label, form  input, .form_contacto textarea, form * {
+
+form label, form  input, .form_contacto textarea, form *  {
+    font-family: 'Courier New', Courier, monospace;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 40px;
+    padding: 30px;
     width: 100%;
     border-radius: 5px;
     box-sizing: border-box;
@@ -184,18 +185,12 @@ form label, form  input, .form_contacto textarea, form * {
     margin-top:5px;
     margin-bottom: 5px;
 }
-form label {
-    display: flex;
-}
-form label * {
-    width: auto;
-    display: inline;
-}
+
 form  textarea {
     height:200px;
 }
 
-.btn_submit {
+.btn_submit, .btn_form {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
@@ -203,8 +198,12 @@ form  textarea {
     border-radius: 4px;
     cursor: pointer;
 }
+.btn_form {
+    border: 1px black solid;
+    font-size: 1rem;
+}
   
-.btn_submit:hover {
+.btn_submit:hover, .btn_form:hover {
     background-color: #45a049;
 }
 
@@ -213,6 +212,13 @@ form  textarea {
     cursor:initial;
 }
 
+form .form_col {
+    display: block;
+}
+form .form_col:nth-child(2) input {
+    display: flex;
+    justify-content: center;
+}
 
 table{
     padding:15px 10px;
@@ -306,6 +312,7 @@ span img{
 }
 .apto, .origen {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     visibility: hidden;
@@ -348,10 +355,6 @@ header .main_nav li:hover{
     background-color: rgba(87, 149, 92, 0.8);
 }
 
-footer p{
-    align-content: space-between;
-}
-
 .captchaBad {
     color: rgb(255,0,0);
 }
@@ -361,6 +364,7 @@ footer p{
 
 form h2, label{
     font-size:1rem;
+    justify-content: space-around;
 }
 
 
@@ -434,5 +438,13 @@ form h2, label{
     .contenido_secundario {
         width:25%;
     }
-
+    form .form_col:first-child {
+        width:60%;
+    }
+    form .form_col:nth-child(2) {
+        width:40%;
+    }
+    form .form_col:nth-child(2) input {
+        height: 33%;
+    }
 }
