--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,28 @@ table {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
+
+.btn_row button{
+    background-color: rgba(125, 202, 131, 0.8);
+    color:black;
+    border: black 1px solid;
+    margin-right: 3px;
+}
+
+tfoot button{
+    background-color: rgba(125, 202, 131, 0.8);
+    color:black;
+    border: black 1px solid;
+}
+
+.btn_row button:hover{
+    background-color: #45a049;
+}
+
+tfoot button:hover{
+    background-color: #45a049;
+}
+
 table tbody tr td:first-child {
     text-align: left;
 }
@@ -546,4 +568,5 @@ div.div_form_menu.mostrar {
     form .form_col:nth-child(2) input {
         height: 20%;
     }
+
 }
